--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">mtbFollow</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="location">Location</string>
+    <string name="locationKey" translatable="false">location</string>
+    <string name="locationDefault" translatable="false">eguilles,fr</string>
+    <string name="unit">Unit</string>
+    <string name="unitKey" translatable="false">unit</string>
+    <string name="unitDefault" translatable="false">metric</string>
+    <string name="preferred_location_menu">Preferred Location</string>
+    <string name="action_share">Share</string>
 </resources>
